add web 3 forms

--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
         </div>
 
         <div class="form-minimal">
-          <form name="contact" method="POST" data-netlify="true" netlify>
-            <input type="hidden" name="form-name" value="contact" />
+          <form name="contact" action="https://api.web3forms.com/submit" method="POST">
+            <input type="hidden" name="access_key" value="e5aaa621-f7f0-4ca5-ae16-b5fa7a386238" />
 
             <div class="input-row">
               <input type="text" name="name" placeholder="Name" required />
